# talks

./: .gitignore  .gitmodules
concurrency-correctness/: .gitignore  dining-phil.py  execution_tree.py  run_helgrind.sh  run_tsan.sh  run_tsan_n.sh  show_tsan_instrumented.sh  talk.html
testing-and-verifying-multithreaded-programs/: CMakeLists.txt  README.md  abstract.txt  backup_slides.html  dump.html  example.html  run_tsan.sh  script.tex  search_tree.py  talk.css  talk.html  talk_2.html  talk_backup.html  talk_story.html  work-stealing-queue.py
testing-and-verifying-multithreaded-programs/examples/: assertion_failure.cpp  data_race.cpp  data_race_fixed_pthread.cpp  data_races.cpp  deadlock_pthread.cpp.instrumented.txt  dining-philosophers.cpp  even_simpler_deadlock.cpp  helgrind_deadlock_test.cpp  lock_free_queue.cpp  lock_free_queue_datarace.cpp  lock_free_queue_two_steals.cpp  my.supp  simple_data_race.cpp  simple_deadlock.cpp  simple_deadlock_pthread.cpp  trivial_deadlock.cpp  work-stealing-queue.cpp
testing-and-verifying-multithreaded-programs/generated_trees/: trace.dot
testing-and-verifying-multithreaded-programs/generated_trees/background_thread.cpp/depth_first_search/trees/animations/: 0.dot  0.eps  1.dot  1.eps  2.dot  2.eps  3.dot  3.eps  4.dot  4.eps
testing-and-verifying-multithreaded-programs/generated_trees/background_thread.cpp/dpor/trees/animations/: 0.dot  0.eps  1.dot  1.eps  2.dot  2.eps
testing-and-verifying-multithreaded-programs/generated_trees/lock_free_queue_datarace.cpp/depth_first_search/trees/animations/: 0.dot  0.eps  1.dot  1.eps  2.dot  2.eps
testing-and-verifying-multithreaded-programs/images/: multithreading_hard_1.tiff
testing-and-verifying-multithreaded-programs/images/dot/: dpor_data_race_example_4.dot  happens_before_equivalence_class_1.dot  state_space_explosion.dot  state_space_explosion_buggy.dot  tsan_data-race-locks-hb-2.dot
testing-and-verifying-multithreaded-programs/scripts/: generate_trees.py
testing-and-verifying-multithreaded-programs/trees/bounded_search/dot/: work-stealing-queue-all-preemptions-0.dot  work-stealing-queue-pre-0-1-no-1.dot  work-stealing-queue-pre-0-1-no-2.dot  work-stealing-queue-pre-0-1.dot  work-stealing-queue-pre-0-2.dot  work-stealing-queue-pre-1-3.dot
(+47 files in other folders)
